HDPI-8796: address pr comment